added some lines

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        <h1>Welkom bij Nate</h1>
+        <h1>Nate</h1>
+        <form>
+            <h2>Aanmelden</h2>
+            <input type="text">
+            <input type="text">
+        </form>
+        <a href="">Of registreer nu een account</a>
         
         <script src="script/main.js" async defer></script>
     </body>
