added registration form

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Nate</h1>
         <form>
             <h2>Aanmelden</h2>
-            <input type="text">
-            <input type="text">
+            <input type="text" placeholder="gebruikersnaam">
+            <input type="password">
         </form>
-        <a href="">Of registreer nu een account</a>
+        <a href="registration.html">Of registreer nu een account</a>
         
         <script src="script/main.js" async defer></script>
     </body>
