added first pages and started css

--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
     </head>
     <body>
+        <header>
         <h1>Nate</h1>
+        </header>
+        <main>
         <form>
             <h2>Aanmelden</h2>
             <input type="text" placeholder="gebruikersnaam">
-            <input type="password">
+            <input type="password" placeholder="wachtwoord">
+            <input type="submit">
+            <a href="registration.html">Of registreer nu een account</a>
         </form>
-        <a href="registration.html">Of registreer nu een account</a>
+        </main>
         
         <script src="script/main.js" async defer></script>
     </body>
