further setup of the html and css prototype

--- a/completion.html
+++ b/completion.html
@@ -15,28 +15,31 @@
         </header>
         <div class="container">
             <div class="row">
-                <a href="completion.html"><img src="images/indi.jpeg"></a>
+                <a href="completion.html"><img src="images/tick.png"></a>
                     <div class="avatarhead">
-                        <h3>Indiana Jones</h3>
-                        <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
+                        <h3>Algemene informatie</h3>
+                        <p>Hier heb je de algemene informatie compleet ingevuld. Klik om aan te passen.</p>
                     </div>
                 </div>
 
                 <div class="row">
-                    <img src="images/tony.jpg">
+                    <a href="completion.html"><img src="images/tick.png"></a>
                         <div class="avatarhead">
-                            <h3>Tony stark</h3>
-                            <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
+                            <h3>Persoonlijke voorkeuren</h3>
+                            <p>Hier heb je jouw persoonlijke voorkeuren toegevoegd. Klik om aan te passen.</p>
                         </div>
                     </div>
 
                     <div class="row">
-                        <img src="images/cap.png">
+                        <a href="completion.html"><img src="images/tick.png"></a>
                             <div class="avatarhead">
-                                <h3>captain america</h3>
-                                <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
+                                <h3>Avatar keuze</h3>
+                                <p>Hier heb je jouw avatar gekozen. Klik om aan te passen.</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="button">
+                        <a href="matches.html">Bevestig</a>
                     </div>
         <script src="script/main.js" async defer></script>
     </body>
