--- a/account1.html
+++ b/account1.html
@@ -9,8 +9,11 @@
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
     </head>
     <body>
+            <div class="backgroundimage"></div>
         <header>
-        <h1>Account</h1>
+                <a href="filter.html">Nate</a>
+                <h1>Account</h1>
+                <a href="filter.html">Profiel</a>
         </header>
         <form action="interests.html">
                         <fieldset>
