--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
     </head>
     <body>
+        <div class="backgroundgif"></div>
         <header>
         <h1>Nate</h1>
         </header>
