some graphical changes

--- a/account1.html
+++ b/account1.html
@@ -11,7 +11,7 @@
     <body>
             <div class="backgroundimage"></div>
         <header>
-                <a href="filter.html">Nate</a>
+                <a href="matches.html">Nate</a>
                 <h1>Account</h1>
                 <a href="filter.html">Profiel</a>
         </header>
