--- a/interests.html
+++ b/interests.html
@@ -11,7 +11,9 @@
     <body>
             <div class="backgroundimage"></div>
         <header>
-        <h1>Account</h1>
+                <a href="matches.html">Nate</a>
+                <h1>Account</h1>
+                <a href="filter.html">Profiel</a>
         </header>
         <form action="avatar.html">
                         <fieldset>
