--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,9 @@
     <body>
             <div class="backgroundgif"></div>
             <header>
-                    <h1>Nate</h1>
+                <a href="matches.html">Nate</a>
+                <h1>Registration</h1>
+                <a href="filter.html">Profiel</a>
                     </header>
         <form action="account1.html">
                         <fieldset>
