--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
         <div class="backgroundgif"></div>
         <header>
-        <h1>Nate</h1>
+                <a href="matches.html">Nate</a>
+                <h1>Aanmelden</h1>
+                <a href="filter.html">Profiel</a>
         </header>
         <main>
         <form>
