made some navigational changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="filter.html">Profiel</a>
         </header>
         <main>
-        <form>
+        <form action="matches.html">
             <h2>Aanmelden</h2>
             <input type="text" placeholder="gebruikersnaam">
             <input type="password" placeholder="wachtwoord">
