--- a/matches.html
+++ b/matches.html
@@ -11,7 +11,7 @@
     <body>
         <div class="backgroundimage"></div>
         <header>
-        <a href="filter.html">Nate</a>
+        <a href="index.html">Uitloggen</a>
         <h1>Matches</h1>
         <a href="filter.html">Filter</a>
         </header>
