added package.json and chat.html

--- a/matchprofile.html
+++ b/matchprofile.html
@@ -21,7 +21,8 @@
         <div class="description">
             <h1>Indiana Jones, 23</h1>
             <p>Hi! Ik ben een groot Indiana Jones fan en kan mezelf ook erg vinden in zijn karakter eigenschappen. Ik ben Loyaal, grappig en nieuwschierig.</p>
-            <a href="">Stuur een bericht</a>
+            <a href="chat.html">Stuur een bericht</a>
+            <a href="">Profielfoto request</a>
         </div>
         
         <script src="script/main.js" async defer></script>
