cleaned up and added icons

--- a/account1.html
+++ b/account1.html
@@ -11,14 +11,14 @@
     <body>
             <div class="backgroundimage"></div>
         <header>
-                <a href="matches.html">Nate</a>
+                <a href="index.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
                 <h1>Account</h1>
-                <a href="filter.html">Profiel</a>
+                <a href="index.html"><img src="images/Logo/SVG/loginIcon.svg"></a>
         </header>
         <form action="interests.html">
                         <fieldset>
                            <legend>Mijn profiel:</legend>
-                            <input type="text" id="gebruikersnaam" placeholder="gebruikersnaam" required/>
+                            <input type="text" id="gebruikersnaam" placeholder="Gebruikersnaam" required/>
                             <!-- <label for="profielfoto">Kies hier het filmkarakter waar je het meeste op lijkt</label>
                             <select name="avatar" id="avatar">
                                 <option value="Geen geselecteerd">geen geselecteerd</option>
@@ -29,7 +29,7 @@
                             </select> -->
                             <label for="profielfoto">Kies hier je echte profielfoto</label>
                             <input type="file" id="profielfoto" name="profielfoto" accept="image/png, image/jpeg">
-                            <textarea name="user description" cols="49" rows="5" placeholder="vertel iets over jezelf"></textarea>
+                            <textarea name="user description" cols="49" rows="5" placeholder="Vertel iets over jezelf"></textarea>
                             <input type="submit" value="volgende">
                         </fieldset>
         </form>
