--- a/chat.html
+++ b/chat.html
@@ -11,9 +11,9 @@
     <body>
             <div class="backgroundimage"></div>
         <header>
-                <a href="matches.html">Nate</a>
-                <h1>Account</h1>
-                <a href="index.html">uitloggen</a>
+                <a href="matches.html"><img src="images/Logo/SVG/nateLogout.svg"></a>
+                <h1>Chat</h1>
+                <a href="filter.html"><img src="images/Logo/SVG/nateFilter.svg"></a>
         </header>
 
         <div class="chatlinks">
