--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     </head>
     <body>
         <div class="backgroundgif"></div>
-        <header>
-                <a href="matches.html">Nate</a>
-                <h1>Aanmelden</h1>
-                <a href="filter.html">Profiel</a>
+        <header class="mainHeader">
+                <a href="matches.html"><img src="images/Logo/SVG/placeholderLogo.svg"></a>
+                <a href="matches.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
+                <!-- <h1>Aanmelden</h1> -->
+                <a href="matches.html"><img src="images/Logo/SVG/placeholderLogo.svg"></a>
         </header>
         <main>
         <form action="matches.html">
