--- a/interests.html
+++ b/interests.html
@@ -11,15 +11,15 @@
     <body>
             <div class="backgroundimage"></div>
         <header>
-                <a href="matches.html">Nate</a>
+                <a href="index.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
                 <h1>Account</h1>
-                <a href="filter.html">Profiel</a>
+                <a href="index.html"><img src="images/Logo/SVG/loginIcon.svg"></a>
         </header>
         <form action="avatar.html">
                         <fieldset>
                            <legend>Mijn interesses:</legend>
                             <input type="number" id="leeftijd" placeholder="leeftijd" required/>
-                            <label for="profielfoto">Waar ben je in geinteresseerd</label>
+                            <label for="avatar">Waar ben je in geinteresseerd</label>
                             <select name="avatar" id="avatar">
                                 <option value="Geen geselecteerd">geen geselecteerd</option>
                                 <option value="Man op zoek naar vrouw">Man op zoek naar vrouw</option>
@@ -27,8 +27,9 @@
                                 <option value="Vrouw op zoek naar vrouw">Vrouw op zoek naar vrouw</option>
                                 <option value="Man op zoek naar man">Man op zoek naar man</option>
                             </select>
+                            <label for="genre">Kies hier je favoriete film.</label>
                             <input type="text" id="favfilm" placeholder="Favoriete film"/>
-                            <label for="genre">Kies hier je favoriete film genre. Deze keuze weegt zwaar mee in het match algoritme.</label>
+                            <label for="genre">Kies hier je favoriete film genre.</label>
                             <select name="avatar" id="avatar">
                                 <option value="Geen geselecteerd">geen geselecteerd</option>
                                 <option value="syfy">syfy</option>
