--- a/matches.html
+++ b/matches.html
@@ -11,9 +11,9 @@
     <body>
         <div class="backgroundimage"></div>
         <header>
-        <a href="index.html">Uitloggen</a>
-        <h1>Matches</h1>
-        <a href="filter.html">Filter</a>
+                <a href="index.html"><img src="images/Logo/SVG/nateLogout.svg"></a>
+                <h1>Matches</h1>
+                <a href="filter.html"><img src="images/Logo/SVG/nateFilter.svg"></a>
         </header>
         <div class="container">
             <div class="matches">
