--- a/registration.html
+++ b/registration.html
@@ -11,9 +11,9 @@
     <body>
             <div class="backgroundgif"></div>
             <header>
-                <a href="matches.html">Nate</a>
+                <a href="index.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
                 <h1>Registration</h1>
-                <a href="filter.html">Profiel</a>
+                <a href="index.html"><img src="images/Logo/SVG/loginIcon.svg"></a>
                     </header>
         <form action="account1.html">
                         <fieldset>
