--- a/avatar.html
+++ b/avatar.html
@@ -11,12 +11,12 @@
     <body>
             <div class="backgroundimage"></div>
         <header>
-                <a href="matches.html">Nate</a>
+                <a href="index.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
                 <h1>Account</h1>
-                <a href="filter.html">Profiel</a>
+                <a href="index.html"><img src="images/Logo/SVG/loginIcon.svg"></a>
         </header>
         <div class="container">
-            <div class="row">
+            <div class="matches">
                 <a href="completion.html"><img src="images/indi.jpeg"></a>
                     <div class="avatarhead">
                         <h3>Indiana Jones</h3>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="matches">
                     <img src="images/tony.jpg">
                         <div class="avatarhead">
                             <h3>Tony stark</h3>
@@ -32,7 +32,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="matches">
                         <img src="images/cap.png">
                             <div class="avatarhead">
                                 <h3>captain america</h3>
