--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <div class="backgroundgif"></div>
         <header class="mainHeader">
-                <a href="matches.html"><img src="images/Logo/SVG/placeholderLogo.svg"></a>
-                <a href="matches.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
+                <!-- <a href="matches.html"><img src="images/Logo/SVG/placeholderLogo.svg"></a> -->
+                <img src="images/Logo/SVG/nateLogo.svg"></a>
                 <!-- <h1>Aanmelden</h1> -->
-                <a href="matches.html"><img src="images/Logo/SVG/placeholderLogo.svg"></a>
+                <!-- <a href="matches.html"><img src="images/Logo/SVG/placeholderLogo.svg"></a> -->
         </header>
         <main>
         <form action="matches.html">
