added gitignore and changed main.js to index.js on all files

--- a/matchprofile.html
+++ b/matchprofile.html
@@ -25,6 +25,6 @@
             <a href="">Profielfoto request</a>
         </div>
         
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
