--- a/registration.html
+++ b/registration.html
@@ -35,6 +35,6 @@
                         </fieldset>
         </form>
         
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
