--- a/account1.html
+++ b/account1.html
@@ -34,6 +34,6 @@
                         </fieldset>
         </form>
         
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
