--- a/avatar.html
+++ b/avatar.html
@@ -40,6 +40,6 @@
                             </div>
                         </div>
                     </div>
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
