--- a/chat.html
+++ b/chat.html
@@ -31,6 +31,6 @@
             <input type="submit" value="verzend">
         </div>
         
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
