--- a/completion.html
+++ b/completion.html
@@ -43,6 +43,6 @@
                     <div class="button">
                         <a href="matches.html">Bevestig</a>
                     </div>
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
