--- a/filter.html
+++ b/filter.html
@@ -44,6 +44,6 @@
                         </fieldset>
         </form>
         
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
