--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         </form>
         </main>
         
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
