--- a/matches.html
+++ b/matches.html
@@ -82,6 +82,6 @@
                                                 </div>
                                             </div>
                     </div>
-        <script src="script/main.js" async defer></script>
+        <script src="script/index.js" async defer></script>
     </body>
 </html>
