--- a/request.html
+++ b/request.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Filter</title>
+        <title>Request</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/main.css">
@@ -12,17 +12,22 @@
         <div class="backgroundimage"></div>
         <header>
                 <a href="index.html"><img src="images/Logo/SVG/nateLogout.svg"></a>
-                <h1>Match</h1>
+                <h1>Request</h1>
                 <a href="filter.html"><img src="images/Logo/SVG/nateFilter.svg"></a>
         </header>
+
+        <section class="warning">
+            <p>Je staat op het punt om een profielfoto request te sturen naar Indiana Jones, 23.
+                Weet je zeker dat je dit wilt doen?
+                Deze persoon krijgt hier een melding van.</p>
+        </section>
         <div class="profileimage">
             <img src="images/indi.jpeg">
-        </div>
-        <div class="description">
-            <h1>Indiana Jones, 23</h1>
-            <p>Hi! Ik ben een groot Indiana Jones fan en kan mezelf ook erg vinden in zijn karakter eigenschappen. Ik ben Loyaal, grappig en nieuwschierig.</p>
-            <a href="chat.html">Stuur een bericht</a>
-            <a href="request.html">Profielfoto request</a>
+            <div class="description">
+            <h1>Toestemming vereist:</h1>
+            <p>Indiana Jones moet toestemming geven voordat jij haar echte profielfoto kan zien.</p>
+            <a href="requestsend.html">Profielfoto request</a>
+            </div>
         </div>
         
         <script src="script/index.js" async defer></script>
