--- a/requestsend.html
+++ b/requestsend.html
@@ -2,9 +2,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Filter</title>
+        <title>Request</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="refresh" content="10;url=https://superstephan1.github.io/Project-Tech/matchesafter.html?" />
         <link rel="stylesheet" href="styles/main.css">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
     </head>
@@ -12,17 +13,20 @@
         <div class="backgroundimage"></div>
         <header>
                 <a href="index.html"><img src="images/Logo/SVG/nateLogout.svg"></a>
-                <h1>Match</h1>
+                <h1>Request</h1>
                 <a href="filter.html"><img src="images/Logo/SVG/nateFilter.svg"></a>
         </header>
+
+        <section class="confirm">
+            <p>De request is verstuurd naar Indiana Jones, 23! Je wordt teruggestuurd naar de matches pagina.</p>
+        </section>
         <div class="profileimage">
             <img src="images/indi.jpeg">
-        </div>
-        <div class="description">
-            <h1>Indiana Jones, 23</h1>
-            <p>Hi! Ik ben een groot Indiana Jones fan en kan mezelf ook erg vinden in zijn karakter eigenschappen. Ik ben Loyaal, grappig en nieuwschierig.</p>
-            <a href="chat.html">Stuur een bericht</a>
-            <a href="request.html">Profielfoto request</a>
+            <div class="description">
+            <h1>Toestemming vereist:</h1>
+            <p>Indiana Jones moet toestemming geven voordat jij haar echte profielfoto kan zien.</p>
+            <a href="">Profielfoto request</a>
+            </div>
         </div>
         
         <script src="script/index.js" async defer></script>
