added chataccept page and changed some styling

--- a/matches.html
+++ b/matches.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="matches">
-                    <img src="images/tony.jpg">
+                        <a href="chataccept.html"><img src="images/tony.jpg"></a>
                         <div class="avatarhead">
                             <h3>Tony stark</h3>
                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
